se empieza con el crud para cursos

--- a/SistemaAC/Views/Shared/_Layout.cshtml
+++ b/SistemaAC/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Categorias" asp-action="Index">Categoria</a></li>
-
+                    <li><a asp-area="" asp-controller="Cursos" asp-action="Index">Cursos</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -52,6 +52,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/Categorias.js" asp-append-version="true"></script>
+        <script src="~/js/Cursos.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
 
     </environment>
