--- a/SistemaAC/Views/Categorias/Index.cshtml
+++ b/SistemaAC/Views/Categorias/Index.cshtml
@@ -1,65 +1,34 @@
-﻿@model IEnumerable<SistemaAC.Models.Categoria>
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "CAtegorias";
 }
-<h2>Index</h2>
+<h2>Categorias</h2>
 <p>
     <a data-toggle="modal" data-target="#modalAC" class="btn btn-info">Crear categoria</a>
 </p>
 <div class="form-group">
     <div class="col-md-6">
-        <input type="text" name="filtrar" id="filtrar" placeholder="Buscar" onkeyup="filtrarDatos(1);" class="form-control" />
+        <input type="text" name="filtrar" id="filtrar" placeholder="Buscar" onkeyup="filtrarDatos(1,'nombre');" class="form-control" />
     </div>
 </div>
-@*<table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Nombre)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Descripcion)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Estado)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Descripcion)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Estado)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.CategoriaId">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.CategoriaId">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.CategoriaId">Delete</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>*@
 
 <table class="table">
     <thead>
         <tr>
-            <th>Nombre</th>
-            <th>Descripción</th>
-            <th>Estado</th>
+            <th>
+                <a href="#" onclick="filtrarDatos(1,'nombre')">Nombre</a>
+            </th>
+            <th>
+                <a href="#" onclick="filtrarDatos(1,'des')">Descripción</a>
+            </th>
+            <th>
+                <a href="#" onclick="filtrarDatos(1,'estado')">Estado</a>
+            </th>
             <th>Opciones</th>
         </tr>
     </thead>
     <tbody id="resultSearch"></tbody>
 </table>
+<div id="paginado"></div>
 <!-- Modal Crear -->
 <div class="modal fade" id="modalAC" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
