--- a/SistemaAC/Views/Cursos/Delete.cshtml
+++ b/SistemaAC/Views/Cursos/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SistemaAC.Models.Categoria
+﻿@model SistemaAC.Models.Curso
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Categoria</h4>
+    <h4>Curso</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,15 +24,39 @@
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Creditos)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Creditos)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Horas)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Horas)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Costo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Costo)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Estado)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.categoria)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.categoria.CategoriaId)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoriaId" />
+        <input type="hidden" asp-for="CursoId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
