creacion del paginador de cursos

--- a/SistemaAC/Views/Cursos/Index.cshtml
+++ b/SistemaAC/Views/Cursos/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="form-group row">
     <div class="col-md-6">
-        <input type="text" id="filtrar" placeholder="Buscar" onkeyup="filtrarCurso(1,'Nombre')" class="form-control"/>
+        <input type="text" id="filtrar" placeholder="Buscar" onkeyup="filtrarCurso(1,'nombre')" class="form-control"/>
     </div>
 </div>
 
@@ -23,19 +23,19 @@
                     <a href="#" onclick="filtrarCurso(1, 'des')">Descripción</a>
                 </th>
                 <th>
-                    <a href="#" onclick="filtrarCurso(1, 'estado')">Creditos</a>
+                    <a href="#" onclick="filtrarCurso(1, 'creditos')">Creditos</a>
                 </th>
                 <th>
-                    <a href="#" onclick="filtrarCurso(1, 'nombre')">Horas</a>
+                    <a href="#" onclick="filtrarCurso(1, 'horas')">Horas</a>
                 </th>
                 <th>
-                    <a href="#" onclick="filtrarCurso(1, 'des')">Costo</a>
+                    <a href="#" onclick="filtrarCurso(1, 'costo')">Costo</a>
                 </th>
                 <th>
                     <a href="#" onclick="filtrarCurso(1, 'estado')">Estado</a>
                 </th>
                 <th>
-                    <a href="#" onclick="filtrarCurso(1, 'des')">Categoria</a>
+                    <a href="#" onclick="filtrarCurso(1, 'categoria')">Categoria</a>
                 </th>
                 <th>
                     Opciones
