--- a/SistemaAC/Views/Shared/_Layout.cshtml
+++ b/SistemaAC/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Categorias" asp-action="Index">Categoria</a></li>
                     <li><a asp-area="" asp-controller="Cursos" asp-action="Index">Cursos</a></li>
+                    <li><a asp-area="" asp-controller="Estudiantes" asp-action="Index">Estudiantes</a></li>
+
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -53,7 +55,9 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/Categorias.js" asp-append-version="true"></script>
         <script src="~/js/Cursos.js" asp-append-version="true"></script>
+        <script src="~/js/Estudiantes.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+
 
     </environment>
     <environment exclude="Development">
