--- a/SistemaAC/Views/Shared/_Layout.cshtml
+++ b/SistemaAC/Views/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@
                     <li><a asp-area="" asp-controller="Cursos" asp-action="Index">Cursos</a></li>
                     <li><a asp-area="" asp-controller="Estudiantes" asp-action="Index">Estudiantes</a></li>
                     <li><a asp-area="" asp-controller="Instructores" asp-action="Index">Instructores</a></li>
+                    <li><a asp-area="" asp-controller="Inscripciones" asp-action="Index">Inscripciones</a></li>
+
 
 
                 </ul>
@@ -58,6 +60,8 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/sweetalert/sweetalert.min.js"></script>
+
         <!-- Data table -->
         <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
 
@@ -67,6 +71,7 @@
         <script src="~/js/Cursos.js" asp-append-version="true"></script>
         <script src="~/js/Estudiantes.js" asp-append-version="true"></script>
         <script src="~/js/Instructores.js" asp-append-version="true"></script>
+        <script src="~/js/Inscripciones.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
 
 
